--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,4 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v1
     - name: set
-      run: git_hash=$(git rev-parse --short "$GITHUB_SHA") && git_branch=${GITHUB_REF#refs/heads/}
-    - name: Test
-      run: sudo ./test.sh ${git_hash} ${git_branch}
+      run: git_hash=$(git rev-parse --short "$GITHUB_SHA") && git_branch=${GITHUB_REF#refs/heads/} && sudo ./test.sh ${git_hash} ${git_branch}
